# API_for_library_management

./: .flake8  .gitignore  README.md  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml
API_for_library_management/: asgi.py  settings.py  urls.py  wsgi.py
authors/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
authors/migrations/: 0001_initial.py  0002_alter_author_options_alter_author_bio_and_more.py
books/: admin.py  apps.py  book_serializers.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_book_options_alter_book_author_and_more.py  0002_book_count.py
config/: settings.py
loans/: models.py  serializers.py  urls.py  views.py
loans/migrations/: 0001_initial.py  0002_initial.py
relbooks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
relbooks/migrations/: 0001_initial.py  0002_initial.py  0003_relbook_delete_loan.py
static/fixture/: test_info.json
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py  0002_alter_user_last_name.py  0003_alter_user_first_name_alter_user_last_name_and_more.py
